Fix spinning arrow and side panel on mobile

--- a/site/src/css/custom.css
+++ b/site/src/css/custom.css
@@ -370,6 +370,12 @@ div.text--center {
   display: none;
 }
 
+@media screen and (max-width: 996px) {
+  .RedocStandalone .menu-content {
+    background-color: var(--ifm-background-color);
+  }
+}
+
 .RedocStandalone operation-type {
   margin-top: 6px;
   font-size: 8px;
@@ -444,7 +450,7 @@ div.text--center {
 }
 
 /* Loading Circle Sizing and Animation */
-.RedocStandalone div > svg:last-child {
+.RedocStandalone > div > svg:last-child {
   width: 48px;
   height: 48px;
   animation-name: ckw;
